# HiPARIS-Hickathon-2021

./: README.md
student_teams_solutions/team_101/.ipynb_checkpoints/: final_submission_v2-checkpoint.ipynb  team_101_solution-checkpoint.ipynb
student_teams_solutions/team_105/: team_105_solution.ipynb
student_teams_solutions/team_105/.ipynb_checkpoints/: evaluation_notebook_template-checkpoint.ipynb
student_teams_solutions/team_41/.ipynb_checkpoints/: Rapport_-_Team11__2_-checkpoint.ipynb  team_41_solution-checkpoint.ipynb
student_teams_solutions/team_45/: team_45_solution.ipynb
student_teams_solutions/team_45/.ipynb_checkpoints/: rule_based_final-checkpoint.ipynb
student_teams_solutions/team_49/: prioritized_memory.py  requirements.txt  team_49_solution.ipynb  train_per.py  wrappers.py
student_teams_solutions/team_49/.ipynb_checkpoints/: evaluation_notebook_team17-checkpoint.ipynb
student_teams_solutions/team_56/: team_56_solution.ipynb
student_teams_solutions/team_70/: README.md  team_70_solution.ipynb
student_teams_solutions/team_73/: team_73_solution.ipynb
student_teams_solutions/team_75/: team_75_solution.ipynb
student_teams_solutions/team_77/: team_77_solution.ipynb
student_teams_solutions/team_81/: DiscreteEnvironment.py
student_teams_solutions/team_85/: team_85_solution.ipynb
student_teams_solutions/team_91/: other_explored_approaches.ipynb  team_91_solution.ipynb
technical_challenge_description/: README.md  evaluation_notebook_template.ipynb  getting_started.ipynb  pyproject.toml
(+14 files in other folders)
