[tool.poetry]
name = "hiparis-hackathon-test-master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
scs = "^2.1.2"
pymgrid = {git = "https://github.com/Total-RD/pymgrid/"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
